# Opencraft

./: CMakeLists.txt  glfw3.lib  main.cpp
resources/: baseCube.vert  test.frag
src/: Block.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  camera.cpp  camera.h  glad.c  main.cpp  settings.h  test.h  texture.cpp  texture.h
